# pinboard-rs

./: CHANGELOG.md  Cargo.toml  README.md  types.rs
.github/workflows/: cargo-test.yml  release-plz.yml
examples/: recent.rs  results.rs  suggest.rs
src/: api.rs  async_pinboard.rs  auth.rs  lib.rs  pinboard.rs  test.rs  types.rs
src/api/: client.rs  endpoint.rs  endpoint_prelude.rs  error.rs  ignore.rs  params.rs  query.rs  raw.rs  types.rs  v1.rs  v2.rs
src/api/v1/: notes.rs  posts.rs  tags.rs  user.rs
src/api/v1/notes/: list.rs  note.rs
src/api/v1/posts/: add.rs  all.rs  dates.rs  delete.rs  get.rs  recent.rs  suggest.rs  update.rs
src/api/v1/tags/: delete.rs  get.rs  rename.rs
src/api/v1/user/: api_token.rs  secret.rs
src/api/v2/: bookmarks.rs  bundles.rs  delta.rs  general.rs  network.rs  notes.rs  search.rs  site.rs  subscriptions.rs  tabs.rs  tags.rs  test.rs  url.rs  user.rs
src/api/v2/general/: auth.rs  awesome.rs  hello.rs  last_update.rs
src/test/: client.rs
src/types/: v1.rs  v1.rs~
