[package]
name = "pinboard-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "~0.10"
log = "~0.4.4"
http = "~0.2"
thiserror = "^1.0.2"
async-trait = "~0.1"
bytes = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
url = "^2.1"

reqwest = { version = "~0.11.0", features = ["blocking", "json"]}

serde = { version = "~1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "~0.7"

[dev-dependencies]
itertools = { version = "~0.10" }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
