[package]
name = "pinboard-rs"
version = "1.0.0"
edition = "2021"
authors = ["Enoch Nyx <nyx@lunar.studio>"]
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "API inferface for pinboard.in"
repository = "https://github.com/lunardotstudio/pinboard-rs"
keywords = ["pinboard", "api", "bookmarks"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive_builder = "~0.10"
log = "~0.4.4"
http = "~0.2"
thiserror = "^1.0.2"
async-trait = "~0.1"
bytes = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
url = "^2.1"

reqwest = { version = "~0.11.0", features = ["blocking", "json"]}

serde = { version = "~1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "~0.7"

[dev-dependencies]
itertools = { version = "~0.10" }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
